# OO_commands_interpreter

./: CMakeLists.txt  README.md
headers/: ComplexObject.h  DoubleObject.h  IntObject.h  Object.h  ReadInput.h  StringObject.h
sources/: ComplexObject.cpp  DoubleObject.cpp  IntObject.cpp  ReadInput.cpp  StringObject.cpp  main.cpp
test/: CMakeLists.txt  testing.cpp
